--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="sticky-top" id="bar">
   <nav class="nar-bar" id="nav">
-    <img src="images2/Screenshot_2023-11-11_205517.jpg_ibadan_logo-removebg-preview.png" alt="">
+    <img id="naira" src="images2/Screenshot_2023-11-11_205517.jpg_ibadan_logo-removebg-preview.png" alt="">
     <a class="a" href="speakers">Speakers</a>
     <a class="a" href="contact">Contact</a>
     <a class="a" href="venue">Venue</a>
     <a class="a" href="button"><button class="b">Get tickets</button></a>
   </nav>
+</div>
   <section>
   <div class="ib">
     <h1 id="ib">Ibadan</h1>
@@ -26,7 +28,7 @@
       <img src="images2/maiden_edition-removebg-preview.png" alt="">
     </div>
     <div class="star">
-      <img id="stars" src="images/star-06b2c062.svg" alt="">
+      <img id="stars" src="images/star-06b2c062.svg" width="40" alt="">
     </div>
     <div class="sept">
       <img src="images2/Screenshot_2023-11-12_110002.jpg_sept_9-removebg-preview.png" alt="">
@@ -36,14 +38,13 @@
 
 </section>
 <section class="bt">
-  <div class="">
-  <a href="buy"><button class="buy">BUY TICKETS</button></a>
+  <div class="btd">
+  <a href="buy"><button class="buy" id="yub">BUY TICKETS</button></a>
 </div>
-  <div class="">
+  <div class="bts">
     <a class="" href="Become"><Button class="buys">BECOME A SPONSOR</Button></a>
   </div>
 </section>
-
 
 
 
@@ -82,28 +83,32 @@
 </div>
 <div class="corn">
   <div>
+    <div class="toyx">
     <h1 class="ven">VENUE</h1>
-    <hr>
+  </div>
     <img class="conf" src="images2/Screenshot_2023-11-12_222012.jpg_conference-removebg-preview.png" alt="" width="1250">
   </div>
 </div>
 <div id="cons" class="d-flex justify-content-between">
+  <div style="border-bottom: 1px solid yellow; width: 1300px;">
   <h1 class="speakers">
       SPEAKERS
   </h1>
   <P class="viw">View ALL Speakers</P>
 </div>
-<hr>
+</div>
 <div class="speaker-container">
   <div class="flexcon">
+    <div class="alabiakin">
     <div class="flexitems akin">
-      <img src="images/PSpeaker1-73bf4300.png" alt="">
+      <img src="images/PSpeaker1-73bf4300.png" width="300px" alt="">
       <h1 class="ht">Hon. Akin Alabi</h1>
       <p>Honorable Member, Federal </p>
       <p class="akins">House of Representatives</p>
     </div>
+    </div>
     <div class="flexitems">
-      <img src="images/PSpeaker2-26b36498.png" alt="">
+      <img src="images/PSpeaker2-26b36498.png" width="300px" alt="">
       <h1 class="ht">
         Seun Onigbinde
       </h1>
@@ -112,7 +117,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images/PSpeaker3-bd021836.png" alt="">
+      <img src="images/PSpeaker3-bd021836.png" width="300px" alt="">
       <h1 class="ht">
         Sam Aiyesoro
       </h1>
@@ -121,7 +126,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images/PSpeaker4-000c125c.png" alt="">
+      <img src="images4/vicki.jpg" width="300px" alt="">
       <h1 class="ht">
         Victor Ehindero
       </h1>
@@ -132,12 +137,12 @@
   </div>
   <div class="flexcon">
     <div class="flexitems akin">
-      <img src="images3/5.jpg" alt="">
+      <img src="images3/5.jpg" width="300px" alt="">
       <h1 class="ht">Sanmi Adebunmi</h1>
       <p>CEO PatchPay</p>
     </div>
     <div class="flexitems">
-      <img src="images3/6.jpg" alt="">
+      <img src="images3/6.jpg" width="300px" alt="">
       <h1 class="ht">
         Rilwan Akeyewale
       </h1>
@@ -146,7 +151,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/7.jpg" alt="">
+      <img src="images3/7.jpg" width="300px" alt="">
       <h1 class="ht">
         Ore Afolayan
       </h1>
@@ -155,7 +160,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/8.jpg" alt="">
+      <img src="images3/8.jpg" width="300px" alt="">
       <h1 class="ht">
         Asiwaju Lerry
       </h1>
@@ -166,12 +171,12 @@
   </div>
   <div class="flexcon">
     <div class="flexitems akin">
-      <img src="images3/9.jpg" alt="">
+      <img src="images3/9.jpg" width="300px" alt="">
       <h1 class="ht">Olugbenga Ogunbowale</h1>
       <p>Olugbenga Ogunbowale</p>
     </div>
     <div class="flexitems">
-      <img src="images3/10.jpg" alt="">
+      <img class="olumba" src="images4/olumba.jpg" width="300px" alt="">
       <h1 class="ht">
         Olumide Akinsola
       </h1>
@@ -180,32 +185,32 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/11.jpg" alt="">
-      <h1 class="ht">
+      <img class="adeitan" src="images3/11.jpg" width="300px" alt="">
+      <h1 class="ht tan">
         Adeitan Abimbola Moses
       </h1>
-      <p>
+      <p class="tan">
         Co-founder, Logikeep Africa
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/12.jpg" alt="">
-      <h1 class="ht">
+      <img class="rasheed" src="images3/12.jpg" width="300px" alt="">
+      <h1 class="ht rasheed">
         Rasheed Ridwan
       </h1>
-      <p>
+      <p class="rasheed">
         Cofounder - Shiip
       </p>
     </div>
   </div>
   <div class="flexcon">
     <div class="flexitems akin">
-      <img src="images3/13.jpg" alt="">
+      <img src="images3/13.jpg" width="300px" alt="">
       <h1 class="ht">Olumide Omotoso</h1>
       <p>CEO Watu</p>
     </div>
     <div class="flexitems">
-      <img src="images3/14.jpg" alt="">
+      <img src="images4/oga sam.jpg" width="300px" alt="">
       <h1 class="ht">
         Sam Adeleke
       </h1>
@@ -214,7 +219,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/15.jpg" alt="">
+      <img src="images3/15.jpg" width="300px" alt="">
       <h1 class="ht">
         Omomame Imafidon
       </h1>
@@ -223,7 +228,7 @@
       </p>
     </div>
     <div class="flexitems">
-      <img src="images3/16.jpg" alt="">
+      <img src="images3/16.jpg" width="300px" alt="">
       <h1 class="ht">
         Damilola Oluwatunmise-Adediran
       </h1>
@@ -234,12 +239,15 @@
   </div>
   <div class="flexcon">
     <div class="flexitems akin">
-      <img src="images3/17.jpg" alt="">
+      <div class="Olu">
+      <img src="images3/17.jpg" width="300px" alt="">
       <h1 class="ht">Oluwamayowa Oshidero</h1>
       <p>Founder, Equilibrium Zone</p>
     </div>
+    </div>
     <div class="flexitems">
-      <img src="images3/18.jpg" alt="">
+      <div class="edem">
+      <img src="images4/edem.jpg" width="300px" alt="">
       <h1 class="ht">
         Edem Dorothy Ossai
       </h1>
@@ -247,8 +255,10 @@
         Regional Coordinator, NORRAG, and Executive Director MAYEIN
       </p>
     </div>
+    </div>
     <div class="flexitems femi">
-      <img src="images3/19.jpg" alt="">
+      <div class="emi">
+      <img src="images3/19.jpg" width="300px" alt="">
       <h1 class="ht">
         Adewumi Onaopemipo Femi
       </h1>
@@ -256,6 +266,7 @@
         CEO @ Alusoft Technologies Ltd
       </p>
     </div>
+  </div>
   </div>
 </div>
 <div class="ticket">
@@ -281,44 +292,106 @@
   </div>
   <div class="doingscontain">
     <div class="doings1">
-<header>
+<h5>
   MARK ZUCKERBERG
-</header>
-<h1>
+</h5>
+<h5 class="">
   Regular
-</h1>
-<h1>
+</h5>
+<h5 class="">
   Ticket
-</h1>
-<p>
+</h5>
+<p class="w1">
   🎟️ Full Access to Live Events. Gain entry to all the
   exciting live events
 </p>
-<p>
+<p class="w1">
   🤝 Networking Opportunities, Connect with like-
   minded individuals, industry experts, and tech
   enthusiasts.
 </p>
-<p>
+<p class="w1">
   🎁 Exciting Gifts, As a token of our appreciation,
   you'll receive special gifts exclusive to 'Mark
   Zuckerberg' Basic Ticket holders.
 </p>
-<div>
-  <p>
-    N1000
-  </p>
+<p class="w1">
+  N1000
+</p>
+<div class="w1">
   <button>Get ticket</button>
 </div>
 
     </div>
     <div class="wordings2">
-
+      <h5 class="">
+      MARK ZUCKERBERG
+    </h5>
+    <h5 class="">
+      Regular
+    </h5>
+    <h5 class="">
+      Ticket
+    </h5>
+    <p>
+      🎟️ Full Access to Live Events. Gain entry to all the
+      exciting live events
+    </p>
+    <p>
+      🤝 Networking Opportunities, Connect with like-
+      minded individuals, industry experts, and tech
+      enthusiasts.
+    </p>
+    <p>
+      🎁 Exciting Gifts, As a token of our appreciation,
+      you'll receive special gifts exclusive to 'Mark
+      Zuckerberg' Basic Ticket holders.
+    </p>
+    <div>
+      <p>
+        N1000
+      </p>
+      <button>Get ticket</button>
+    </div>
     </div>
     <div class="wordings3">
-
+      <h5 class="h1">
+      MARK ZUCKERBERG
+    </h5>
+    <h5 class="h1">
+      Regular
+    </h5>
+    <h5 class="h1">
+      Ticket
+    </h5>
+    <p>
+      🎟️ Full Access to Live Events. Gain entry to all the
+      exciting live events
+    </p>
+    <p>
+      🤝 Networking Opportunities, Connect with like-
+      minded individuals, industry experts, and tech
+      enthusiasts.
+    </p>
+    <p>
+      🎁 Exciting Gifts, As a token of our appreciation,
+      you'll receive special gifts exclusive to 'Mark
+      Zuckerberg' Basic Ticket holders.
+    </p>
+    <div>
+      <p>
+        N1000
+      </p>
+      <button>Get ticket</button>
+    </div>
     </div>
   </div>
 </section>
+
+<div class="gold">
+<div class="gs"> 
+  Gold sponsors
+</div>
+</div>
 </body>
 </html>
